force-app/main/default/objects/Send_Email__mdt/Send_Email__mdt.object-meta.xml
<CustomObject>
    <label>Send Email</label>
    <pluralLabel>Send Emails</pluralLabel>
</CustomObject>