force-app/main/default/objects/Send_Email__mdt/fields/Attachment_Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Library_Name__c</fullName>
    <label>Attachment Library Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>