force-app/main/default/objects/Send_Email__mdt/fields/Fields_To_Query__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Query__c</fullName>
    <label>Fields To Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>