force-app/main/default/objects/Send_Email__mdt/fields/Send_To_Contact_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Contact_Field_API_Name__c</fullName>
    <label>Send To Contact Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>