force-app/main/default/objects/Send_Email__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Fields_To_Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>